--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #f0f0f0;  // Change background color
+  background-color: #2a3d47;  // Change background color
   color: #333333;  // Text color
 }
 
