--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,8 @@
+---
+---
+
+@import "jekyll-theme-minimal";
+
 body {
   background-color: #2a3d47;  // Change background color
   color: #333333;  // Text color
